--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -442,6 +442,13 @@
 
 		               		}
 						});
+						
+						$(".datatable-responsive-eventi-provider").DataTable().on( 'responsive-display', function ( e, datatable, row, showHide, update ) {
+							    	$(".linkButton").each(function(index){
+				                		var tempLink = [[@{/}]] + $(this).attr('href');
+				                	   		$(this).attr('href', tempLink);
+				                	});
+						} );
 			        }
 				 $(".datatable-responsive-eventi-attuazione").DataTable({
 						"bInfo" : false,
