Fixed the bug where column Cellulare dissapeared

--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -986,7 +986,13 @@
 								"width": "1px",
 								"sClass": "center",
 								"responsivePriority": 2
-							}
+							},
+							{
+								"targets": 5,
+								"width": "1px",
+								"sClass": "center",
+								"responsivePriority": 1
+							}]
 					    });
 					}else {
 						$('#'+target).DataTable({
