--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -184,7 +184,8 @@
 					</div>
 					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC != null and 
 					eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and 
-					@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					eventoWrapperShow.evento.versione != null and 
+					eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.eventofsc_tipologiaSperimentazione}">Tipologia sperimentazione</span>
 						</label>
@@ -291,9 +292,10 @@
 												<th th:text="#{label.qualifica}">Qualifica</th>
 												<th th:text="#{label.cv}">CV</th>
 												<th 
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" th:text="#{label.identificativo_persona_evento}">Identificativo Responsabile</th>
+													th:if="${eventoWrapperShow.evento.versione != null and 
+													eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}" th:text="#{label.identificativo_persona_evento}">Identificativo Responsabile</th>
 												<th 
-												th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}" 
+												th:if="${eventoWrapperShow.evento.versione != null and eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}" 
 												th:text="#{label.svolge_attivita_docenza}">Svolge attivita di docenza</th>
 											</tr>
 										</thead>
@@ -308,12 +310,14 @@
 													<span th:unless="${persona.anagrafica.cv?.id}" th:text="#{label.nessun_cv}"></span>
 												</td>
 												<td 
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and 
+													th:if="${eventoWrapperShow.evento.versione != null and 
+													eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018 and 
 													persona != null}" 
 													th:text="${persona.identificativoPersonaRuoloEvento?.nome}">
 												</td>
 												<td 
-													th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento) and 
+													th:if="${eventoWrapperShow.evento.versione != null and 
+													eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018 and 
 													persona != null}" 
 													th:text="${persona.svolgeAttivitaDiDocenza} ? #{label.sì} : #{label.no}">
 												</td>
@@ -329,7 +333,7 @@
 					</div>
 					
 					<!-- ESPERTI -->
-					<div class="item form-group" th:if="${eventoWrapperShow.esperti != null and !#sets.isEmpty(eventoWrapperShow.esperti) and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.esperti}">Esperti</span>
 						</label>
@@ -368,8 +372,47 @@
 						</div>
 					</div>
 					
+					<!-- COORDINATORI -->
+					<div class="item form-group" th:if="${@eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.coordinatori}">Coordinatori</span>
+						</label>
+						<div th:if="${eventoWrapperShow.coordinatori != null and !#sets.isEmpty(eventoWrapperShow.coordinatori)}">
+							<div class="item form-group" style="clear:both; padding:2px;"></div>
+							<div class="item form-group" style="clear:both">
+								<div class="col-md-3 col-sm-3 col-xs-11"></div>
+								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<table id="coordinatori" class="datatable-responsive-responsabili table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+										<thead>
+											 <tr>
+												<th th:text="#{label.cognome}">Cognome</th>
+												<th th:text="#{label.nome}">Nome</th>
+												<th th:text="#{label.cf}">CF</th>
+												<th th:text="#{label.identificativo_persona_evento}">Identificativo</th>
+												<th th:text="#{label.svolge_attivita_docenza}">Svolge attività di docenza</th>
+											</tr>
+										</thead>
+										<tbody>
+											<tr th:attr="data-row-id=${__${status.index}__}"
+											th:each="persona, status : ${eventoWrapperShow.coordinatori}">
+												<td th:text="${persona.anagrafica.cognome}"></td>
+												<td th:text="${persona.anagrafica.nome}"></td>
+												<td th:text="${persona.anagrafica.codiceFiscale}"></td>
+												<td th:text="${persona.identificativoPersonaRuoloEvento?.nome}"></td>
+												<td th:text="${persona.svolgeAttivitaDiDocenza} ? #{label.sì} : #{label.no}"></td>
+											</tr>
+										</tbody>
+									</table>
+								</div>
+							</div>
+						</div>
+						<div th:unless="${eventoWrapperShow.coordinatori != null and !#sets.isEmpty(eventoWrapperShow.coordinatori)}" class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value danger" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+					
 					<!-- INVESTIGATORI -->
-					<div class="item form-group" th:if="${eventoWrapperShow.investigatori != null and !#sets.isEmpty(eventoWrapperShow.investigatori) and eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and @eventoServiceController.isVersionDue(eventoWrapperShow.evento)}">
+					<div class="item form-group" th:if="${eventoWrapperShow.evento.tipologiaEventoFSC == T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).ATTIVITA_DI_RICERCA and eventoWrapperShow.evento.versione == T(it.tredi.ecm.dao.enumlist.EventoVersioneEnum).DUE_DAL_2018}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.investigatori}">Esperti</span>
 						</label>
@@ -774,6 +817,28 @@
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 							<div class="value" th:if="${eventoWrapperShow.evento.proceduraVerificaQualitaPercepita != null}" th:text="${eventoWrapperShow.evento.proceduraVerificaQualitaPercepita} ? #{label.sì} : #{label.no} "></div>
 							<div class="value danger" th:unless="${eventoWrapperShow.evento.proceduraVerificaQualitaPercepita != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+					
+					<!-- REDAZIONE DI UN DOCUMENTO CONCLUSIVO -->
+					<div class="item form-group">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.prevista_redazione_documento_conclusivo}">E’ prevista la redazione di un documento conclusivo quale ad es. linee guida, procedure, protocolli, indicazioni operative?</span>
+						</label>
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.previstaRedazioneDocumentoConclusivo != null}" th:text="${eventoWrapperShow.evento.previstaRedazioneDocumentoConclusivo} ? #{label.sì} : #{label.no} "></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.previstaRedazioneDocumentoConclusivo != null}" th:text="#{label.dato_non_inserito}"></div>
+						</div>
+					</div>
+					
+					<!-- PRESENTE TUTOR ESPERTO ESTERNO VALIDATORE -->
+					<div class="item form-group">
+						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
+							<span class="label-show" th:text="#{label.presente_tutor_esperto_esterno_validatore}">E’ presente un Tutor esperto esterno che validi le attività del gruppo?</span>
+						</label>
+						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+							<div class="value" th:if="${eventoWrapperShow.evento.presenteTutorEspertoEsternoValidatoreAttivita != null}" th:text="${eventoWrapperShow.evento.presenteTutorEspertoEsternoValidatoreAttivita} ? #{label.sì} : #{label.no} "></div>
+							<div class="value danger" th:unless="${eventoWrapperShow.evento.presenteTutorEspertoEsternoValidatoreAttivita != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
 
