--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -239,7 +239,7 @@ function loadScript(url, callback){
 								</th:block>
 									<a class="btn btn-success pull-right" th:text="#{label.cerca}" th:href="@{/evento/ricerca}"></a>
 									<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{/home}"></a>
-									<a data-toggle="modal" class="btn btn-success pull-right" onclick="openModal()">Archive</a>
+									<a th:if="${archiviaEvento != null and archiviaEvento == true}" th:text="#{label.archivia}" data-toggle="modal" class="btn btn-success pull-right" onclick="openModal()">Archive</a>
 									<div class="modal fade" id="myModal">
 										<div class="modal-dialog">
 											<div class="modal-content">
@@ -276,7 +276,7 @@ function loadScript(url, callback){
 							<table id="eventiListTable" th:if="${(eventoList != null and !#lists.isEmpty(eventoList)) and (showAllList == null or showAllList == false) }" class="datatable-responsive-eventi-provider table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
 								<thead style = "word-break: keep-all !important;">
 									<tr>
-										<th class="text-full-length" th:if="${search != null and  (search == T(it.tredi.ecm.dao.enumlist.EventoSearchEnum).ALIMENTAZIONE_PRIMA_INFANZIA || search == T(it.tredi.ecm.dao.enumlist.EventoSearchEnum).MEDICINE_NON_CONVENZIONALI)}"><input name="select_all" value="1" id="select-all" type="checkbox"/> Archive</th>
+										<th class="text-full-length" th:if="${search != null and (archiviaEvento != null and archiviaEvento == true)}"><input name="select_all" value="1" id="select-all" type="checkbox"/> Archive</th>
 										<th th:text="#{label.codice_identificativo}">label.codice_identificativo</th>
 										<th th:if="${#authentication.principal.hasProfile('SEGRETERIA')}" th:text="#{label.denominazione_legale}">label.denominazione_legale</th>
 										<th th:text="#{label.edizione_short}">label.edizione_short</th>
@@ -296,7 +296,7 @@ function loadScript(url, callback){
 								</thead>
 								<tbody th:remove="all-but-first">
 									<tr th:each="evento, row : ${eventoList}">
-										<td th:if="${search != null and  (search == T(it.tredi.ecm.dao.enumlist.EventoSearchEnum).ALIMENTAZIONE_PRIMA_INFANZIA || search == T(it.tredi.ecm.dao.enumlist.EventoSearchEnum).MEDICINE_NON_CONVENZIONALI)}"><input th:value="${evento.id}" type="checkbox"/></td>
+										<td th:if="${search != null and (archiviaEvento != null and archiviaEvento == true)}"><input th:value="${evento.id}" type="checkbox"/></td>
 										<td><a th:text="${evento.getCodiceIdentificativo()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/show|}"></a></td>
 										<td th:if="${#authentication.principal.hasProfile('SEGRETERIA')}" th:text="${evento.provider.denominazioneLegale}"></td>
 										<td th:text="${evento.edizione}"></td>
@@ -392,7 +392,7 @@ function loadScript(url, callback){
 				var titolo
 				var url
 				
-				if([[${search != null &&  (search == T(it.tredi.ecm.dao.enumlist.EventoSearchEnum).ALIMENTAZIONE_PRIMA_INFANZIA || search == T(it.tredi.ecm.dao.enumlist.EventoSearchEnum).MEDICINE_NON_CONVENZIONALI)}]]){
+				if([[${search != null && archiviaEvento == true}]]){
 					confermati++; //take into consideration the checkboxes column
 					azioni++;
 					titolo++;
